--- a/vue3/package.json
+++ b/vue3/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "vue": "^3.2.13"
   },
   "devDependencies": {
