--- a/zhe-ye/tsconfig.json
+++ b/zhe-ye/tsconfig.json
@@ -25,7 +25,11 @@
       "esnext",
       "dom",
       "dom.iterable",
-      "scripthost"
+      "scripthost",
+      "es2018",
+      "es2015",
+      "es2016",
+      "es2018.promise"
     ]
   },
   "include": [
